# NtfsInspector

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: 枚举设备.md  硬盘常识.md  过程记录.md
src/: disk_reader.hpp  find_devices.hpp  main.cpp  my_utilities.hpp  ntfs_access.hpp  ntfs_app_FileNameIndex.hpp  ntfs_app_UsnJrnl.hpp  ntfs_attr.cpp  ntfs_attr.h  ntfs_attr_data.cpp  ntfs_attr_data.h  ntfs_data_runs.h  ntfs_file_record.cpp  ntfs_file_record.h  ntfs_index_entry.h  ntfs_index_node.h  ntfs_index_record.cpp  ntfs_index_record.h
